--- a/src/com/medical/projet/java/views/content/Clients.fxml
+++ b/src/com/medical/projet/java/views/content/Clients.fxml
@@ -12,26 +12,26 @@
 
 <VBox xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.medical.projet.java.controllers.ClientController">
    <children>
-      <StackPane fx:id="ClientBody">
+      <StackPane fx:id="body">
          <children>
             <BorderPane>
                <center>
-                  <TableView id="Table_Client" fx:id="Table_Client" prefHeight="560.0">
+                  <TableView id="Table" fx:id="table" prefHeight="560.0">
                     <columns>
-                      <TableColumn id="Name" fx:id="Name_Client" editable="false" minWidth="100.0" prefWidth="140.0" text="Name" />
-                        <TableColumn id="Surname" fx:id="Surname_Client" editable="false" minWidth="100.0" prefWidth="140.0" text="Surname" />
-                        <TableColumn id="Date_Nais" fx:id="Date_Nais_Client" editable="false" minWidth="100.0" prefWidth="130.0" text="Date_Nais" />
-                        <TableColumn id="Tel" fx:id="Tel_Client" editable="false" minWidth="100.0" prefWidth="130.0" text="Tel" />
-                        <TableColumn id="Email" fx:id="Email_Client" editable="false" minWidth="200.0" prefWidth="260.0" text="Email" />
+                      <TableColumn id="name" fx:id="name" editable="false" minWidth="100.0" prefWidth="140.0" text="Name" />
+                        <TableColumn id="surname" fx:id="surname" editable="false" minWidth="100.0" prefWidth="140.0" text="Surname" />
+                        <TableColumn id="dateNais" fx:id="dateNais" editable="false" minWidth="100.0" prefWidth="130.0" text="DateNais" />
+                        <TableColumn id="tel" fx:id="tel" editable="false" minWidth="100.0" prefWidth="130.0" text="Tel" />
+                        <TableColumn id="email" fx:id="email" editable="false" minWidth="200.0" prefWidth="260.0" text="Email" />
                     </columns>
                   </TableView>
                </center>
                <top>
-                  <Pane fx:id="clientTop" prefHeight="45.0" prefWidth="770.0" BorderPane.alignment="CENTER">
+                  <Pane fx:id="top" prefHeight="45.0" prefWidth="770.0" BorderPane.alignment="CENTER">
                      <children>
                         <Label fx:id="searchLabel" layoutY="5.0" text="Search : " />
                         <TextField fx:id="searchField" layoutX="70.0" prefHeight="42.0" prefWidth="250.0" />
-                        <Button fx:id="createClientButton" layoutX="630.0" mnemonicParsing="false" text="+ Create a new Client" />
+                        <Button fx:id="createButton" layoutX="630.0" mnemonicParsing="false" text="+ Create a new Client" />
                      </children>
                   </Pane>
                </top>
