--- a/src/com/medical/projet/java/views/content/Specialistes.fxml
+++ b/src/com/medical/projet/java/views/content/Specialistes.fxml
@@ -1,10 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/21" >
-   <Label text="Specialistes" />
-   
+<VBox xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.medical.projet.java.controllers.SpecialisteController">
+   <children>
+      <StackPane fx:id="body">
+         <children>
+            <BorderPane>
+               <center>
+                  <TableView id="Table" fx:id="table" prefHeight="560.0">
+                    <columns>
+                      <TableColumn id="name" fx:id="name" editable="false" minWidth="100.0" prefWidth="140.0" text="Name" />
+                        <TableColumn id="surname" fx:id="surname" editable="false" minWidth="100.0" prefWidth="140.0" text="Surname" />
+                        <TableColumn id="date_Nais" fx:id="dateNais" editable="false" minWidth="100.0" prefWidth="130.0" text="Date_Nais" />
+                        <TableColumn id="tel" fx:id="tel" editable="false" minWidth="100.0" prefWidth="130.0" text="Tel" />
+                        <TableColumn id="email" fx:id="email" editable="false" minWidth="200.0" prefWidth="260.0" text="Email" />
+                    </columns>
+                  </TableView>
+               </center>
+               <top>
+                  <Pane fx:id="top" prefHeight="45.0" prefWidth="770.0" BorderPane.alignment="CENTER">
+                     <children>
+                        <Label fx:id="searchLabel" layoutY="5.0" text="Search : " />
+                        <TextField fx:id="searchField" layoutX="70.0" prefHeight="42.0" prefWidth="250.0" />
+                        <Button fx:id="createButton" layoutX="590.0" mnemonicParsing="false" text="+ Create a new Specialiste" />
+                     </children>
+                  </Pane>
+               </top>
+            </BorderPane>
+         </children>
+      </StackPane>
+   </children>
 </VBox>
