fixing some UI bugs after trying to reach a generic approach to
client/specialiste

--- a/src/com/medical/projet/java/views/App.fxml
+++ b/src/com/medical/projet/java/views/App.fxml
@@ -5,14 +5,14 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Label?>
 
-<BorderPane fx:id="body" fx:controller="com.medical.projet.java.controllers.AppController" xmlns:fx="http://javafx.com/fxml/1" prefWidth="1000" prefHeight="600">
+<BorderPane fx:id="appBody" fx:controller="com.medical.projet.java.controllers.AppController" xmlns:fx="http://javafx.com/fxml/1" prefWidth="1000" prefHeight="600">
     <left>
-       	<BorderPane fx:id="menuPane">
+		<BorderPane fx:id="menuPane">
 
 		</BorderPane>
     </left>
     <center>
-        <VBox id="content">
+        <VBox fx:id="content">
     		<Label text="My APP" />
     		
 		</VBox>
