--- a/src/com/medical/projet/java/views/content/Clients.fxml
+++ b/src/com/medical/projet/java/views/content/Clients.fxml
@@ -31,7 +31,7 @@
                      <children>
                         <Label fx:id="searchLabel" layoutY="5.0" text="Search : " />
                         <TextField fx:id="searchField" layoutX="70.0" prefHeight="42.0" prefWidth="250.0" />
-                        <Button fx:id="createButton" layoutX="630.0" mnemonicParsing="false" text="+ Create a new Client" />
+                        <Button fx:id="createButton" mnemonicParsing="false" text="+ Create a new Client" />
                      </children>
                   </Pane>
                </top>
