--- a/src/com/medical/projet/java/views/content/Specialistes.fxml
+++ b/src/com/medical/projet/java/views/content/Specialistes.fxml
@@ -20,7 +20,7 @@
                     <columns>
                       <TableColumn id="name" fx:id="name" editable="false" minWidth="100.0" prefWidth="140.0" text="Name" />
                         <TableColumn id="surname" fx:id="surname" editable="false" minWidth="100.0" prefWidth="140.0" text="Surname" />
-                        <TableColumn id="date_Nais" fx:id="dateNais" editable="false" minWidth="100.0" prefWidth="130.0" text="Date_Nais" />
+                        <TableColumn id="dateNais" fx:id="dateNais" editable="false" minWidth="100.0" prefWidth="130.0" text="DateNais" />
                         <TableColumn id="tel" fx:id="tel" editable="false" minWidth="100.0" prefWidth="130.0" text="Tel" />
                         <TableColumn id="email" fx:id="email" editable="false" minWidth="200.0" prefWidth="260.0" text="Email" />
                     </columns>
@@ -31,7 +31,7 @@
                      <children>
                         <Label fx:id="searchLabel" layoutY="5.0" text="Search : " />
                         <TextField fx:id="searchField" layoutX="70.0" prefHeight="42.0" prefWidth="250.0" />
-                        <Button fx:id="createButton" layoutX="590.0" mnemonicParsing="false" text="+ Create a new Specialiste" />
+                        <Button fx:id="createButton" mnemonicParsing="false" text="+ Create a new Specialiste" />
                      </children>
                   </Pane>
                </top>
