design to code acte medical overlay

--- a/src/com/medical/projet/java/views/content/Clients.fxml
+++ b/src/com/medical/projet/java/views/content/Clients.fxml
@@ -12,11 +12,11 @@
 
 <VBox xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.medical.projet.java.controllers.ClientController">
    <children>
-      <StackPane fx:id="body">
+      <StackPane fx:id="body" VBox.vgrow="ALWAYS">
          <children>
             <BorderPane>
                <center>
-                  <TableView id="Table" fx:id="table" prefHeight="1000.0">
+                  <TableView id="Table" fx:id="table">
                     <columns>
                       <TableColumn id="name" fx:id="name" editable="false" minWidth="100.0" prefWidth="140.0" text="Name" />
                         <TableColumn id="surname" fx:id="surname" editable="false" minWidth="100.0" prefWidth="140.0" text="Surname" />
