--- a/src/com/medical/projet/java/views/content/Actes médicaux.fxml
+++ b/src/com/medical/projet/java/views/content/Actes médicaux.fxml
@@ -12,7 +12,7 @@
 
 <VBox xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.medical.projet.java.controllers.ActesMedicauxController">
    <children>
-      <StackPane fx:id="body">
+      <StackPane fx:id="body" VBox.vgrow="ALWAYS">
          <children>
             <BorderPane>
                <center>
