--- a/src/com/medical/projet/ressources/css/styles.css
+++ b/src/com/medical/projet/ressources/css/styles.css
@@ -277,8 +277,13 @@
 	-fx-text-fill: -text;
 }
 
-#overlayAmTop TextField, #overlayAmTop DatePicker, #overlayAmCenter TextField, #overlayAmCenter DatePicker, #overlayAmBottom TextField, #overlayAmBottom DatePicker {
+#overlayAmTop TextField, #overlayAmTop DatePicker, #overlayAmCenter TextField, #overlayAmCenter DatePicker, #overlayAmBottom TextField, #overlayAmBottom ChoiceBox, #overlayAmBottom DatePicker {
 	-fx-pref-width: 230;
+}
+
+#overlayAmBottom ChoiceBox Label{
+	
+	-fx-padding: 5 5 5 10;
 }
 
 #overlayAmTopDelete{
