refactor of insertifexist procedure
bit of refactoring, cleaning
create new am done
need to do populate am overlay when clicking on table to replace stuff
ask teacher about type of acte medical in db how
change numbers to names, maybe

--- a/src/com/medical/projet/ressources/css/styles.css
+++ b/src/com/medical/projet/ressources/css/styles.css
@@ -220,6 +220,10 @@
     -fx-border-insets: 10 0 0 0;
 }
 
+#overlayContentPane .table-view Label{
+	-fx-padding: 0;
+}
+
 
 #overLayContent > Label{
 	-fx-text-fill: -text;
