--- a/src/com/medical/projet/java/views/content/Actes médicaux.fxml
+++ b/src/com/medical/projet/java/views/content/Actes médicaux.fxml
@@ -16,14 +16,14 @@
          <children>
             <BorderPane>
                <center>
-                  <TableView id="Table" fx:id="table">
+                  <TableView id="table" fx:id="table">
                     <columns>
-                      	<TableColumn id="Ref" fx:id="ref_acte_med" editable="false" minWidth="50.0" text="Ref" />
-                        <TableColumn id="Client" fx:id="client" editable="false" minWidth="50.0" text="Client" />
-                        <TableColumn id="Specialiste" fx:id="specialiste" editable="false" minWidth="50.0" text="Specialiste" />
-                        <TableColumn id="Lieu" fx:id="lieu" editable="false" minWidth="50.0"  text="Lieu" />
-                        <TableColumn id="Date début" fx:id="date_debut" editable="false" minWidth="150.0" text="Date début" />
-                        <TableColumn id="Date fin" fx:id="date_fin" editable="false" minWidth="150.0" text="Date fin" />
+                      	<TableColumn id="ref" fx:id="ref_acte_med" editable="false" minWidth="50.0" text="Ref" />
+                        <TableColumn id="client" fx:id="client" editable="false" minWidth="50.0" text="Client" />
+                        <TableColumn id="specialiste" fx:id="specialiste" editable="false" minWidth="50.0" text="Specialiste" />
+                        <TableColumn id="lieu" fx:id="lieu" editable="false" minWidth="50.0"  text="Lieu" />
+                        <TableColumn id="date début" fx:id="date_debut" editable="false" minWidth="150.0" text="Date début" />
+                        <TableColumn id="date fin" fx:id="date_fin" editable="false" minWidth="150.0" text="Date fin" />
                     </columns>
                   </TableView>
                </center>
