--- a/src/com/medical/projet/java/views/content/Specialistes.fxml
+++ b/src/com/medical/projet/java/views/content/Specialistes.fxml
@@ -16,13 +16,13 @@
          <children>
             <BorderPane>
                <center>
-                  <TableView id="Table" fx:id="table">
+                  <TableView id="table" fx:id="table">
                     <columns>
-                      <TableColumn id="name" fx:id="name" editable="false" minWidth="100.0" prefWidth="140.0" text="Name" />
-                        <TableColumn id="surname" fx:id="surname" editable="false" minWidth="100.0" prefWidth="140.0" text="Surname" />
-                        <TableColumn id="dateNais" fx:id="dateNais" editable="false" minWidth="100.0" prefWidth="130.0" text="DateNais" />
-                        <TableColumn id="tel" fx:id="tel" editable="false" minWidth="100.0" prefWidth="130.0" text="Tel" />
-                        <TableColumn id="email" fx:id="email" editable="false" minWidth="200.0" prefWidth="260.0" text="Email" />
+                        <TableColumn id="name" fx:id="name" editable="false" minWidth="100.0" text="Name" />
+                        <TableColumn id="firstname" fx:id="firstname" editable="false" minWidth="100.0" text="Firstname" />
+                        <TableColumn id="dateNais" fx:id="dateNais" editable="false" minWidth="100.0" text="DateNais" />
+                        <TableColumn id="tel" fx:id="tel" editable="false" minWidth="100.0" text="Tel" />
+                        <TableColumn id="email" fx:id="email" editable="false" minWidth="200.0" text="Email" />
                     </columns>
                   </TableView>
                </center>
