--- a/src/com/medical/projet/ressources/css/styles.css
+++ b/src/com/medical/projet/ressources/css/styles.css
@@ -93,7 +93,7 @@
     -fx-background-insets: 0,0 0 5 0, 0 0 6 0, 0 0 7 0;
     -fx-background-radius: 8;
     -fx-background-color: 
-    	-primary,
+    	-background,
         -secondary,
         -primary;  
 
