--- a/src/com/medical/projet/ressources/css/styles.css
+++ b/src/com/medical/projet/ressources/css/styles.css
@@ -291,7 +291,7 @@
 }
 
 #overlayAmTopDelete{
-	-fx-padding: 20 0 0 350;
+	-fx-padding: 20 0 0 0;
 	-fx-spacing: 20;
 }
 
@@ -327,7 +327,6 @@
 }
 
 #amSearchField{
-	
 	-fx-pref-width: 250;
 }
 
@@ -368,3 +367,13 @@
 #overlayAmBottomStuff{
 	-fx-padding: 0 0 20 0;
 }
+
+#topAmHbox{
+	-fx-spacing: 20;
+	-fx-pref-width: 550;
+}
+
+#refAm{
+	-fx-pref-width: 100;
+}
+
