--- a/src/com/medical/projet/java/views/content/Actes médicaux.fxml
+++ b/src/com/medical/projet/java/views/content/Actes médicaux.fxml
@@ -21,7 +21,7 @@
                       	<TableColumn id="ref" fx:id="ref_acte_med" editable="false" text="Ref" />
                         <TableColumn id="client" fx:id="client" editable="false" text="Client" />
                         <TableColumn id="specialiste" fx:id="specialiste" editable="false" text="Specialiste" />
-                        <TableColumn id="typeOperation" fx:id="typeOperation" editable="false" text="Type operation" />
+                        <TableColumn id="competence" fx:id="competence" editable="false" text="Acte Medical" />
                         <TableColumn id="lieu" fx:id="lieu" editable="false"  text="Lieu" />
                         <TableColumn id="date début" fx:id="date_debut" editable="false" text="Date début" />
                         <TableColumn id="date fin" fx:id="date_fin" editable="false" text="Date fin" />
