everything is fixed in Acte Medical
fixed all int to names
fixed names showing but int sent to db then list updated
create new sent competence in necessiter table in db

--- a/src/com/medical/projet/ressources/css/styles.css
+++ b/src/com/medical/projet/ressources/css/styles.css
@@ -372,7 +372,7 @@
 	-fx-pref-width: 100;
 }
 
-#competenceChoiceBox Label, #lieuChoiceBox Label {
+#ID_COMPETENCE Label, #lieuChoiceBox Label {
 	-fx-padding: 5 5 5 10;
 	-fx-text-fill: -primary;
 }
